--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,9 @@
     flex-direction: row;
 }
 
-#app-content-mindmap {
-    width: 800px;
-    height: 800px;
+#mindmap {
+	width: 100%;
+	height: 100%;
 }
 
 .sidebar-header {
