Switched to migrations and PHP 7 #12 + a lot of optimizations

--- a/css/main.scss
+++ b/css/main.scss
@@ -20,11 +20,9 @@
  *
  */
 
-#app-sidebar {
-	.icon {
-		opacity: 0.5;
-		padding: 5px 15px;
-		display: inline;
-		float: right;
+.app-navigation-entry-menu, .popovermenu {
+	button[class^="icon-"] {
+		height: 20px;
+		margin: 6px 0 6px 0;
 	}
 }
